# dcamctl

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  config.yml  release.toml
.github/workflows/: build.yaml  publish.yaml
doc/: dcamctl.1.md
src/: cam_info.rs  cli.rs  config.rs  control.rs  lib.rs  macros.rs  main.rs
