[package]
name = "dcamctl"
version = "0.2.1-dev"
authors = ["Antoine Gourlay <antoine@gourlay.fr>"]
edition = "2018"

[dependencies]
anyhow = "1"
log = '0.4'
env_logger = '0.8'
gstreamer = "0.16"
directories-next = '2'
ctrlc = { version = "3", features = ["termination"] }
regex = { version = "1", default-features = false, features = ["std", "perf"]}
lenient_semver = "0.4"

[dependencies.config]
version = '0.11'
default-features = false
features = ['yaml']

[dependencies.serde]
version = '1'
features = ['derive']

[dependencies.structopt]
version = '0.3'
default-features = false
features = ['suggestions']

[profile.release]
lto = true
