[package]
name = "dcamctl"
version = "0.4.1-dev"
authors = ["Antoine Gourlay <antoine@gourlay.fr>"]
edition = "2018"

[dependencies]
anyhow = "1"
log = '0.4'
env_logger = '0.9'
gstreamer = { version = "0.17", features = ["v1_10"]}
gstreamer-video = { version = "0.17", features = ["v1_10"]}
directories-next = '2'
ctrlc = { version = "3", features = ["termination"] }
regex = { version = "1", default-features = false, features = ["std", "perf"]}
lenient_semver = "0.4"
futures = "0.3"
termion = "1"
async-stream = "0.3"
serde-aux = { version = "2", default-features = false }

[dependencies.config]
version = '0.11'
default-features = false
features = ['yaml']

[dependencies.serde]
version = '1'
features = ['derive']

[dependencies.structopt]
version = '0.3'
default-features = false
features = ['suggestions']

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "signal"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json"]

[profile.release]
lto = true
