[package]
name = "dcamctl"
version = "0.5.0-dev"
authors = ["Antoine Gourlay <antoine@gourlay.fr>"]
edition = "2021"
rust-version = "1.57"

[dependencies]
anyhow = "1"
log = '0.4'
env_logger = '0.9'
gstreamer = { version = "0.18", features = ["v1_10"]}
gstreamer-video = { version = "0.18", features = ["v1_10"]}
directories-next = '2'
ctrlc = { version = "3", features = ["termination"] }
regex = { version = "1", default-features = false, features = ["std", "perf"]}
lenient_semver = "0.4"
futures = "0.3"
termion = "1"
async-stream = "0.3"
serde-aux = { version = "3", default-features = false }

[dependencies.config]
version = '0.13'
default-features = false
features = ['yaml']

[dependencies.serde]
version = '1'
features = ['derive']

[dependencies.clap]
version = "3"
features = ["derive", "cargo", "wrap_help"]

[build-dependencies.clap]
version = "3"
features = ["derive", "cargo", "wrap_help"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "signal"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json"]

[build-dependencies]
version_check = "0.9"
log = "0.4"
clap_complete = "3"

[profile.release]
lto = true
